# ipmi-rs

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
examples/: ipmi.rs
src/: error.rs  ipmi.rs  lib.rs  rmcp.rs
src/ipmi/: client.rs  command.rs  constants.rs  pkt15.rs  pkt20.rs  request.rs  response.rs
