[package]
name = "ipmi"
version = "0.2.0"
authors = ["9506hqwy"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/ipmi-rs"
license = "MIT OR Apache-2.0"
keywords = ["ipmi"]
categories = ["network-programming"]

[dependencies]
aes = "0.8.4"
cbc = { version = "0.2.0", features = ["std"] }
hmac = "0.13.0"
log = "0.4.29"
rand = "0.10.0"
sha1 = "0.11.0"
uuid = "1.23.0"

[dev-dependencies]
clap = "4.6.0"
env_logger = "0.11.10"

[[example]]
name = "ipmi"

[profile.release]
strip = "symbols"
lto = true
